--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,8 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-brand: #BE968E;
+  --color-pink: var(--primary-color);
+  --text-black-200: var(--text-gray);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -48,6 +49,9 @@
 }
 
 :root {
+  --font-poppins: "Poppins", sans-serif;
+  --text-gray: #8a8a8a;
+  --primary-color: #be968e;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -83,6 +87,9 @@
 }
 
 .dark {
+  --font-poppins: "Poppins", sans-serif;
+  --text-gray: #8a8a8a;
+  --primary-color: #be968e;
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -122,5 +129,14 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-poppins) sans-serif;
+    font-weight: 400;
+    color: var(--text-gray);
+  }
+  .section-padding {
+    width: calc(100% - 16rem);
+    margin: 0 auto;
+    padding: 1rem 0;
+
   }
 }
