--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,9 +134,26 @@
     color: var(--text-gray);
   }
   .section-padding {
-    width: calc(100% - 16rem);
+    max-width: 1400px;
     margin: 0 auto;
-    padding: 1rem 0;
+    padding: 1rem 1rem;
+  }
 
+  @media (min-width: 640px) {
+    .section-padding {
+      padding: 1rem 2rem;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .section-padding {
+      padding: 1rem 4rem;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .section-padding {
+      padding: 1rem 8rem;
+    }
   }
 }
